--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -2,17 +2,17 @@
 <div><span>id: </span>{{hero.id}}</div>
 <div><span>name: </span>{{hero.name}}</div> -->
 
-<h2>My Heroes</h2>
+<h2>1My Heroes</h2>
 <ul class="heroes">
-    <li *ngFor="let hero of heros" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
-        <span class="badge">{{hero.id}}</span>{{hero.name}}
-    </li>
+  <li *ngFor="let hero of heros">
+    <!-- (click)="onSelect(hero)" [class.selected]="hero === selectedHero"> -->
+    <a routerLink="/detail/{{ hero.id }}">
+      <span class="badge">{{ hero.id }}</span>{{ hero.name }}
+    </a>
+  </li>
 </ul>
 
-<app-hero-detail [hero]="selectedHero"></app-hero-detail>
-
-
-
+<!-- <app-hero-detail [hero]="selectedHero"></app-hero-detail> -->
 
 <!-- <div>
     <label>name:
